--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@plugin "flowbite-react/plugin/tailwindcss";
+@source "../.flowbite-react/class-list.json";
 
 .morphic-effect {
   background: rgba(255, 255, 255, 0.1);
@@ -7,26 +9,20 @@
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
+.desktop-menu .nav-item button:hover {
+  transition-duration: 300ms;
+}
 .dropdown {
   opacity: 0;
   visibility: hidden;
   transform: translateY(10px);
   transition: all 0.5s ease;
 }
-.desktop-menu .nav-item button:hover {
-  transition-duration: 300ms;
-}
 .nav-item:hover .dropdown {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
 }
-/* .navbar {
+.navbar a {
   font-family: Inter, sans-serif;
-} */
-/* .logo {
-  transition: transform 0.3s ease;
 }
-.logo:hover {
-  transform: scale(1.05);
-} */
