--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,23 @@
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
 
+::-webkit-scrollbar-track {
+  color: white;
+}
+::-webkit-scrollbar {
+  width: 10px;
+  color: #888;
+}
+
 .morphic-effect {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .desktop-menu .nav-item button:hover {
-  transition-duration: 300ms;
+  transition-duration: 500ms;
 }
 .dropdown {
   opacity: 0;
