--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,8 @@ body {
 }
 
 .morphic-effect {
-  background: rgba(255, 255, 255, 0.9);
+  /* background: rgba(255, 255, 255, 0.9); */
+  /* background-color: #071a26; */
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
